<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/redish"
    tools:context="com.example.hp.androidQuiz.Time_Up">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/rediyish"
        android:minHeight="?actionBarSize"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="13dp">
            <ImageView
                android:id="@+id/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/appname" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:weightSum="1">

                    <TextView
                    android:id="@+id/timeUpText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|bottom"
                    android:text="@string/timeup"
                    android:layout_weight="0.4"
                    android:textColor="@color/white"
                    android:textSize="40sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0.13"
                    android:src="@drawable/whitebell"
                    />
            </LinearLayout>

        </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:weightSum="1">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="1">
        <info.hoang8f.widget.FButton
                android:id="@+id/playAgainButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                android:textColor="@color/rediyish"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_weight="0.65"
                fbutton:buttonColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <info.hoang8f.widget.FButton
                android:id="@+id/quitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="@string/quit"
                android:textColor="@color/rediyish"
                android:textSize="17sp"
                android:textStyle="bold"
                fbutton:buttonColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/Ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id2">
            </com.google.android.gms.ads.AdView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>