<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hp.androidQuiz.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/blueocean"
        android:minHeight="?actionBarSize"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="1"
            android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:weightSum="1">
            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="20sp"
                android:text="@string/initialscore"
                android:textColor="@color/white"
                android:layout_weight="0.8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:padding="4dp"
            android:weightSum="1">
            <ImageView
                android:id="@+id/android"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/android" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="end"
            android:weightSum="1">
            <TextView
                android:id="@+id/timers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:paddingRight="8dp"
                android:text="@string/initialtimer"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/questionanswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:padding="10dp"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:padding="3dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/shape"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txtQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/blakish"
                    android:textSize="19sp"
                    android:ellipsize="end"
                    android:layout_weight="0.8" />

            </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/answers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:padding="5dp"
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:weightSum="1"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <info.hoang8f.widget.FButton
                        android:id="@+id/button1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.99"
                        android:onClick="button1"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="15.0sp"
                        fbutton:buttonColor="@color/blueocean"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/answer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="1">

                    <info.hoang8f.widget.FButton
                        android:id="@+id/button2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.99"
                        android:onClick="button2"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="15.0sp"
                        fbutton:buttonColor="@color/blueocean" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="1"
                    >

                    <info.hoang8f.widget.FButton
                        android:id="@+id/button3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.99"
                        android:onClick="button3"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="15.0sp"
                        fbutton:buttonColor="@color/blueocean"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/Ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id1">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

  </LinearLayout>

</LinearLayout>
